01 notions de départ fini

--- a/1-Les-bases-du-CSS/01-Notions-de-depart/02-La-selection/index.html
+++ b/1-Les-bases-du-CSS/01-Notions-de-depart/02-La-selection/index.html
@@ -8,7 +8,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1 class="title first-title" id="title-1">Bac à sable CSS</h1>
+<div class="container">
+  <p>Lorem ipsum dolor sit amet.</p>
+  <ul class="list">
+    <li class="list-item">lien</li>
+    <li class="list-item">lien</li>
+    <li class="list-item">lien</li>
+    <li class="list-item">lien</li>
+  </ul>
+</div>
 
 
 
