--- a/1-Les-bases-du-CSS/01-Notions-de-depart/06-Modele-de-boite/index.html
+++ b/1-Les-bases-du-CSS/01-Notions-de-depart/06-Modele-de-boite/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS - Bac à Sable</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>CSS - Bac à Sable</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-
+<div class="box"></div>
+<span>Lorem ipsum dolor.</span>
+<span>Lorem ipsum dolor.</span>
+<span>Lorem ipsum dolor.</span>
 </body>
 </html>
