lecon 2 fini début leçon 3

--- a/1-Les-bases-du-CSS/02-Medias/02-Styliser-une-video/index.html
+++ b/1-Les-bases-du-CSS/02-Medias/02-Styliser-une-video/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>CSS - Bac à Sable</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-
-  </body>
+    <link href="style.css" rel="stylesheet"/>
+</head>
+<body>
+<video autoplay controls loop muted>
+    <source src="ressources/beach.mp4">
+</video>
+</body>
 </html>
