--- a/1-Les-bases-du-CSS/02-Medias/01-Styliser-une-image/index.html
+++ b/1-Les-bases-du-CSS/02-Medias/01-Styliser-une-image/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS - Bac à Sable</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>CSS - Bac à Sable</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-  
 
+<!-- <img alt="cat" src="./images/cat.jpg"> -->
+
+<div class="hero-section"></div>
 
 </body>
 </html>
