--- a/1-Les-bases-du-CSS/03-Texte/01-Les-proprietes-du-texte/index.html
+++ b/1-Les-bases-du-CSS/03-Texte/01-Les-proprietes-du-texte/index.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS - Bac à Sable</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>CSS - Bac à Sable</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Les 10 meilleurs plats Italiens</h1>
+<h1>Les 10 meilleurs plats Italiens</h1>
 
-    
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At nesciunt vero quos voluptates deserunt! Aspernatur ratione, praesentium consequuntur sunt laborum temporibus doloremque? Suscipit similique voluptate esse blanditiis omnis? Expedita iure deleniti commodi praesentium molestiae laborum veritatis quas excepturi quia. Ipsam perferendis ipsa nihil harum tenetur repellendus molestiae ratione aspernatur impedit.</p>
-    
 
-    <a href="#">Visitez ce site</a>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At nesciunt vero quos voluptates deserunt!
+    Aspernatur ratione, praesentium consequuntur sunt laborum temporibus doloremque?
+    Suscipit similique voluptate esse blanditiis omnis?
+    Expedita iure deleniti commodi praesentium molestiae laborum veritatis quas excepturi quia.
+    Ipsam perferendis ipsa nihil harum tenetur repellendus molestiae ratione aspernatur impedit.</p>
 
-    <ul>
-      <li>Pizza</li>
-      <li>Risotto</li>
-      <li>Raviolis</li>
-      <li>Osso buco</li>
-      <li>Polenta</li>
-    </ul>
-  
-    <ol>
-      <li>Lorem, ipsum dolor.</li>
-      <li>Lorem, ipsum dolor.</li>
-      <li>Lorem, ipsum dolor.</li>
-      <li>Lorem, ipsum dolor.</li>
-    </ol>
 
-  </body>
+<a href="#">Visitez ce site</a>
+
+<ul>
+    <li>Pizza</li>
+    <li>Risotto</li>
+    <li>Raviolis</li>
+    <li>Osso buco</li>
+    <li>Polenta</li>
+</ul>
+
+<ol>
+    <li>Lorem, ipsum dolor.</li>
+    <li>Lorem, ipsum dolor.</li>
+    <li>Lorem, ipsum dolor.</li>
+    <li>Lorem, ipsum dolor.</li>
+</ol>
+
+</body>
 </html>
