fin des bases du css

--- a/1-Les-bases-du-CSS/03-Texte/03-Utiliser-une-police-personnalisee/index.html
+++ b/1-Les-bases-du-CSS/03-Texte/03-Utiliser-une-police-personnalisee/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS - Bac à Sable</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>CSS - Bac à Sable</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-  
+<h1>Stay Classy</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+    Deleniti deserunt dicta fuga fugit,
+    harum in laudantium maxime, minus nostrum quia saepe, sunt velit veniam.
+    Voluptas!</p>
 
 </body>
 </html>
