--- a/1-Les-bases-du-CSS/03-Texte/04-Tronquer-un-texte/index.html
+++ b/1-Les-bases-du-CSS/03-Texte/04-Tronquer-un-texte/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS - Bac à Sable</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>CSS - Bac à Sable</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-  
-    <p>On ne devrait jamais tourner le dos à un danger pour tenter de le fuir. Si vous le faites, vous le multiplierez par deux. Mais si vous l'affrontez rapidement et sans vous dérober, vous le réduirez de moitié.</p>
-  
+
+<p>On ne devrait jamais tourner le dos à un danger pour tenter de le fuir.
+    Si vous le faites, vous le multiplierez par deux.
+    Mais si vous l'affrontez rapidement et sans vous dérober, vous le réduirez de moitié.</p>
+
 </body>
 </html>
