--- a/1-Les-bases-du-CSS/Exercices/01-Coder-un-bouton/index.html
+++ b/1-Les-bases-du-CSS/Exercices/01-Coder-un-bouton/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS - Bac à Sable</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>CSS - Bac à Sable</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    
 
+<button class="btn">
+    submit
+</button>
+<button class="btn">
+    subscribe
+</button>
 
 </body>
 </html>
