--- a/1-Les-bases-du-CSS/Exercices/02-La-carte/index.html
+++ b/1-Les-bases-du-CSS/Exercices/02-La-carte/index.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSS - Bac à Sable</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <title>CSS - Bac à Sable</title>
+    <link href="style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700;900&family=Lato:wght@100;300;400;700;900&display=swap"
+          rel="stylesheet">
 </head>
 <body>
-
-  
+<div class="product-card">
+    <img alt="laptop" src="./ressources/laptop.jpg">
+    <div class="card-content">
+        <h2>Lorem ipsum dolor.</h2>
+        <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            Assumenda est odio quia sint sunt veritatis!</p>
+        <ul>
+            <li>RAM : 32 GO</li>
+            <li>Graphic card : RTX 4090</li>
+            <li>Monitor : 21.5"</li>
+        </ul>
+        <a class="link" href="#">Get that laptop</a>
+    </div>
+</div>
 </body>
 </html>
